--- a/index.html
+++ b/index.html
@@ -1,3 +1,423 @@
-<!doctype html><meta charset="utf-8">
-<div id="jsok" style="position:fixed;right:8px;top:8px;background:#2a3140;color:#fff;padding:6px 10px;border-radius:8px;font:12px system-ui">JS: loading…</div>
-<script>document.getElementById('jsok').textContent='SMOKE OK ' + new Date().toISOString();</script>
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>RS3 Resets Tracker</title>
+  <style>
+    :root { --bg:#101014; --panel:#191c22; --muted:#9aa1ad; --accent:#6ecbff; }
+    body { margin:0; font-family:system-ui, Segoe UI, Arial; background:var(--bg); color:#e9edf3; }
+    .app { width:340px; padding:14px; }
+    .card { background:var(--panel); border-radius:14px; box-shadow:0 10px 30px rgba(0,0,0,.4); padding:14px; margin-bottom:12px; }
+    h1 { font-size:18px; margin:0 0 10px; }
+    .tabs { display:flex; gap:6px; margin:8px 0 10px; }
+    .tab { flex:1; padding:8px; text-align:center; border-radius:10px; cursor:pointer; background:#22262f; user-select:none; }
+    .tab.active { outline:2px solid var(--accent); }
+    .row { display:flex; gap:8px; align-items:center; }
+    .row > * { flex:1; }
+    .pill { font-size:12px; padding:4px 8px; border-radius:999px; background:#232836; color:var(--muted); }
+    .list { display:grid; gap:6px; margin-top:8px; }
+    .item { display:flex; align-items:center; gap:8px; background:#141820; padding:8px; border-radius:10px; }
+    .item a { color:#cfe7ff; text-decoration:none; }
+    .muted { color:var(--muted); font-size:12px; }
+    .controls { display:flex; gap:8px; flex-wrap:wrap; }
+    button { padding:8px 10px; border:0; border-radius:10px; background:#2a3140; color:#e9edf3; cursor:pointer; }
+    button.primary { background:#6ecbff; color:#0a0f16; font-weight:600; }
+    input[type="text"] { width:100%; padding:8px; border-radius:8px; border:1px solid #2a3140; background:#0f131a; color:#e9edf3; }
+    .small { font-size:11px; color:var(--muted); }
+    #jsok { position:fixed; right:8px; top:8px; background:#2a3140; border-radius:10px; padding:4px 8px; font-size:12px; }
+  </style>
+</head>
+<body>
+  <div id="jsok">JS: loading…</div>
+
+  <div class="app">
+    <div class="card">
+      <h1>RS3 Resets Tracker</h1>
+      <div class="muted">Saves progress locally. Reset schedule uses <b>game time (UTC)</b>.</div>
+      <div class="row" style="margin-top:8px;">
+        <select id="profile"></select>
+        <button id="newProfile" type="button">New</button>
+        <button id="delProfile" type="button">Del</button>
+      </div>
+      <div class="row">
+        <div class="pill">Next daily: <span id="nextDaily">—</span></div>
+        <div class="pill">Weekly: <span id="nextWeekly">—</span></div>
+        <div class="pill">Monthly: <span id="nextMonthly">—</span></div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="tabs">
+        <div class="tab active" data-scope="daily">Dailies</div>
+        <div class="tab" data-scope="weekly">Weeklies</div>
+        <div class="tab" data-scope="monthly">Monthlies</div>
+      </div>
+
+      <div class="controls">
+        <input id="addText" type="text" placeholder="Add task (optionally paste RS Wiki URL)"/>
+        <button id="addBtn" class="primary" type="button">Add</button>
+        <button id="bulkAdd" type="button">Bulk Add</button>
+        <button id="clearDone" type="button">Clear Done</button>
+      </div>
+
+      <div class="controls" style="margin-top:6px;">
+        <button id="importDailyScape" type="button">Import from DailyScape (strict)</button>
+        <button id="loadStarter" type="button">Load Starter Pack</button>
+        <button id="resetScope" type="button">Reset This Tab</button>
+        <button id="factoryReset" type="button">Factory Reset</button>
+      </div>
+
+      <div class="list" id="list"></div>
+      <div class="small" style="margin-top:8px;">
+        Tip: Click the task name to edit. Drag to reorder. Progress auto-resets at UTC boundaries:
+        dailies 00:00 UTC; weeklies 00:00 UTC Wednesdays; monthlies 00:00 UTC day 1.
+      </div>
+    </div>
+
+    <div class="card"><div class="small">Source: DailyScape (task ideas) + RS reset times.</div></div>
+  </div>
+
+  <script>
+  (function(){
+    const VERSION = "v23";
+    document.getElementById("jsok").textContent = "JS: OK " + VERSION;
+    try { if (window.alt1 && alt1.identifyAppUrl) { alt1.identifyAppUrl("https://hacza.github.io/RS3-Reset-Tracker.2/appconfig.json"); } } catch(e){}
+
+    const LS_KEY = "rs3_resets_tracker_v1";
+    let state = load() || initDefault();
+    let currentScope = "daily";
+
+    const el = (id) => document.getElementById(id);
+    const listEl = el("list");
+    const tabs = Array.from(document.querySelectorAll(".tab"));
+    const profileSel = el("profile");
+
+    function refreshProfiles() {
+      profileSel.innerHTML = "";
+      state.profiles.forEach((p,i) => {
+        const opt = document.createElement("option");
+        opt.value = i; opt.textContent = p.name; profileSel.appendChild(opt);
+      });
+      profileSel.value = state.currentProfile;
+    }
+    el("newProfile").onclick = () => {
+      const name = prompt("Profile name?","Main");
+      if (!name) return;
+      state.profiles.push(emptyProfile(name));
+      state.currentProfile = String(state.profiles.length-1);
+      save(); refreshProfiles(); render();
+    };
+    el("delProfile").onclick = () => {
+      if (state.profiles.length <= 1) return alert("Keep at least one profile.");
+      if (!confirm("Delete current profile?")) return;
+      const idx = +state.currentProfile;
+      state.profiles.splice(idx,1);
+      state.currentProfile = "0";
+      save(); refreshProfiles(); render();
+    };
+    profileSel.onchange = () => { state.currentProfile = profileSel.value; save(); render(); };
+
+    tabs.forEach(t => t.onclick = () => {
+      tabs.forEach(x=>x.classList.remove("active"));
+      t.classList.add("active");
+      currentScope = t.dataset.scope;
+      renderList();
+    });
+
+    el("addBtn").onclick = addItem;
+    el("addText").addEventListener("keydown", e => { if (e.key === "Enter") addItem(); });
+    function addItem() {
+      const txt = el("addText").value.trim();
+      if (!txt) return;
+      const m = txt.match(/https?:\/\/\S+/);
+      const name = txt.replace(/https?:\/\/\S+/,"").trim() || txt;
+      const url = m ? m[0] : "";
+      getScopeArr().push({ id: uid(), name, url, done:false });
+      el("addText").value = "";
+      save(); renderList();
+    }
+
+    el("bulkAdd").onclick = () => {
+      const hint = [
+        "Paste one task per line. You can include a Wiki URL after the name.",
+        "Example:",
+        "Vis wax https://runescape.wiki/w/Vis_wax",
+        "Reaper assignment https://runescape.wiki/w/Reaper_assignment",
+        "",
+        "Paste here:"
+      ].join("\\n");
+      const text = prompt(hint, "");
+      if (!text) return;
+      const lines = text.split(/\\r?\\n/).map(l=>l.trim()).filter(Boolean);
+      const arr = getScopeArr();
+      const have = new Set(arr.map(h => (h.name||"").toLowerCase()));
+      let added = 0;
+      for (const line of lines){
+        const m = line.match(/https?:\\/\\/\\S+/);
+        const url = m ? m[0] : "";
+        const name = line.replace(/https?:\\/\\/\\S+/,"").replace(/[–—-]\\s*$/,"").trim();
+        if (!name) continue;
+        const key = name.toLowerCase();
+        if (have.has(key)) continue;
+        arr.push({ id: uid(), name, url, done:false });
+        have.add(key); added++;
+      }
+      save(); renderList();
+      alert(\`Added \${added} \${currentScope} task(s).\`);
+    };
+
+    function renderList() {
+      const arr = getScopeArr();
+      listEl.innerHTML = "";
+      arr.forEach((it, idx) => {
+        const row = document.createElement("div");
+        row.className = "item"; row.draggable = true;
+
+        const cb = document.createElement("input");
+        cb.type = "checkbox"; cb.checked = !!it.done;
+        cb.onchange = () => { it.done = cb.checked; save(); };
+
+        const name = document.createElement("input");
+        name.value = it.name;
+        Object.assign(name.style,{flex:"1",background:"transparent",color:"#e9edf3",border:"0",outline:"none"});
+        name.onchange = () => { it.name = name.value.trim(); save(); };
+
+        const link = document.createElement("a");
+        link.href = it.url || "#";
+        link.textContent = it.url ? "Wiki" : "";
+        link.target = "_blank";
+
+        const del = document.createElement("button");
+        del.textContent = "Del";
+        del.style.padding = "6px 8px";
+        del.onclick = () => {
+          if (confirm(\`Delete "\${it.name}"?\`)) {
+            arr.splice(idx, 1);
+            save(); renderList();
+          }
+        };
+
+        row.append(cb, name, link, del);
+
+        row.addEventListener("dragstart", e => e.dataTransfer.setData("text/plain", idx));
+        row.addEventListener("dragover", e => e.preventDefault());
+        row.addEventListener("drop", e => {
+          e.preventDefault();
+          const from = +e.dataTransfer.getData("text/plain");
+          const to = idx;
+          if (from===to) return;
+          const a = arr[from];
+          arr.splice(from,1); arr.splice(to,0,a);
+          save(); renderList();
+        });
+
+        listEl.appendChild(row);
+      });
+    }
+
+    el("importDailyScape").onclick = async () => {
+      const BTN = el("importDailyScape");
+      const prev = BTN.textContent; BTN.textContent = "Importing…"; BTN.disabled = true;
+
+      const SOURCES = [
+        "https://dailyscape.github.io/rsdata/rsdata.js",
+        "https://cdn.jsdelivr.net/gh/dailyscape/rsdata@main/rsdata.js",
+        "https://dailyscape.github.io/rsdata/rsapidatawikibulk.js",
+        "https://cdn.jsdelivr.net/gh/dailyscape/rsdata@main/rsapidatawikibulk.js"
+      ];
+
+      try {
+        let ds = null, used = null, errs = [];
+        for (const src of SOURCES) {
+          try { delete window.rsapidata; } catch {}
+          await new Promise((resolve, reject) => {
+            const s = document.createElement("script");
+            s.src = src + "?t=" + Date.now(); s.async = true;
+            s.onload = () => resolve();
+            s.onerror = () => reject(new Error("script load failed"));
+            document.head.appendChild(s);
+          }).catch(e => errs.push(src+" — "+e.message));
+          try { if (!ds && typeof rsapidata !== "undefined") ds = rsapidata; } catch {}
+          if (!ds && window.rsapidata) ds = window.rsapidata;
+          if (ds) { used = src; break; }
+        }
+        if (!ds) throw new Error("No dataset. Tried:\\n" + errs.join("\\n"));
+
+        const NAME_KEYS = ["name","item","title","label","task","activity","text"];
+        const URL_KEYS  = ["wiki","url","link","wikilink","w","page"];
+        const RS_WIKI   = /runescape\\.wiki/i;
+
+        const pullName = (o)=>{ for (const k of NAME_KEYS) if (typeof o?.[k]==="string" && o[k].trim()) return o[k].trim(); return ""; };
+        const pullUrl  = (o)=>{ for (const k of URL_KEYS)  if (typeof o?.[k]==="string" && o[k].trim()) return o[k].trim(); return ""; };
+        const freqWord = (s)=>{ const t=(s||"").toLowerCase(); if (t.includes("daily")) return "daily"; if (t.includes("week")) return "weekly"; if (t.includes("month")) return "monthly"; return ""; };
+        const infer    = (o)=>{ 
+          for (const [k,v] of Object.entries(o)) {
+            const f = freqWord(k) || (typeof v==="string" && freqWord(v));
+            if (f) return f;
+          }
+          if (typeof o.frequency==="string") return freqWord(o.frequency);
+          if (typeof o.interval==="string")  return freqWord(o.interval);
+          if (typeof o.reset==="string")     return freqWord(o.reset);
+          return "";
+        };
+
+        const seen = new WeakSet();
+        const candidates = [];
+        function walk(x, depth=0){
+          if (depth>6 || x==null) return;
+          if (Array.isArray(x)) { x.forEach(v=>walk(v, depth+1)); return; }
+          if (typeof x === "object") {
+            if (seen.has(x)) return; seen.add(x);
+            const name = pullName(x);
+            const url  = pullUrl(x);
+            const bucket = infer(x);
+            if (name && url && RS_WIKI.test(url) && bucket) {
+              candidates.push({name, url, bucket});
+            }
+            for (const v of Object.values(x)) walk(v, depth+1);
+          }
+        }
+        walk(ds);
+
+        const daily=[], weekly=[], monthly=[];
+        const have = new Set();
+        const pushU = (arr,t)=>{ const key=t.name.toLowerCase(); if (!have.has(key)) { arr.push(t); have.add(key); } };
+        candidates.forEach(t => {
+          if (t.bucket==="daily") pushU(daily,t);
+          else if (t.bucket==="weekly") pushU(weekly,t);
+          else if (t.bucket==="monthly") pushU(monthly,t);
+        });
+
+        const found = { daily: daily.length, weekly: weekly.length, monthly: monthly.length };
+
+        const added = { daily:0, weekly:0, monthly:0 };
+        const buckets = { daily, weekly, monthly };
+        ["daily","weekly","monthly"].forEach(scope => {
+          const incoming = buckets[scope] || [];
+          const here = state.profiles[getP()].items[scope];
+          const have2 = new Set(here.map(h => (h.name || "").toLowerCase()));
+          incoming.forEach(t => {
+            const key = (t.name || "").toLowerCase();
+            if (!key || have2.has(key)) return;
+            here.push({ id: uid(), name: t.name, url: t.url || "", done: false });
+            have2.add(key);
+            added[scope]++;
+          });
+        });
+
+        save(); renderList();
+
+        let msg = `Imported from DailyScape
+Found: ${found.daily} daily, ${found.weekly} weekly, ${found.monthly} monthly.
+Added: ${added.daily} daily, ${added.weekly} weekly, ${added.monthly} monthly.
+Source: ${used}`;
+        if (!found.daily && !found.weekly && !found.monthly) {
+          msg += `
+
+No clearly-labeled tasks were found.
+(I only import entries that BOTH link to the RuneScape Wiki AND explicitly mention daily/weekly/monthly.)`;
+        }
+        alert(msg);
+
+      } catch (e) {
+        console.error(e);
+        alert("Import failed: " + e.message);
+      } finally {
+        BTN.textContent = prev; BTN.disabled = false;
+      }
+    };
+
+    el("loadStarter").onclick = () => {
+      if (!confirm("Add a small starter set? (You can delete or edit anything later.)")) return;
+      const adds = {
+        daily: [
+          "Vis wax https://runescape.wiki/w/Vis_wax",
+          "Reaper assignment https://runescape.wiki/w/Reaper_assignment",
+          "Divine locations https://runescape.wiki/w/Divination#Divine_locations",
+          "Treasure Hunter keys https://runescape.wiki/w/Treasure_Hunter",
+          "Familiar upkeep",
+          "Check POF animals https://runescape.wiki/w/Player-owned_farm"
+        ],
+        weekly: [
+          "Penguin hide and seek https://runescape.wiki/w/Penguin_Hide_and_Seek",
+          "Tears of Guthix https://runescape.wiki/w/Tears_of_Guthix_(minigame)",
+          "Rush of Blood https://runescape.wiki/w/Rush_of_Blood",
+          "Wilderness Flash Events https://runescape.wiki/w/Wilderness_Flash_Events"
+        ],
+        monthly: [
+          "Giant Oyster https://runescape.wiki/w/Giant_Oyster",
+          "God Statues https://runescape.wiki/w/God_Statues",
+          "Premier Club Vault https://runescape.wiki/w/Premier_Club_Vault"
+        ]
+      };
+      for (const scope of ["daily","weekly","monthly"]) {
+        const here = state.profiles[getP()].items[scope];
+        const have = new Set(here.map(h => (h.name || "").toLowerCase()));
+        adds[scope].forEach(line => {
+          const m = line.match(/https?:\/\/\S+/);
+          const url = m ? m[0] : "";
+          const name = line.replace(/https?:\/\/\S+/,"").trim();
+          const key = name.toLowerCase();
+          if (!have.has(key)) { here.push({ id: uid(), name, url, done:false }); have.add(key); }
+        });
+      }
+      save(); renderList();
+      alert("Starter tasks added. You can edit names or attach Wiki links any time.");
+    };
+
+    el("clearDone").onclick = () => { getScopeArr().forEach(x=>x.done=false); save(); renderList(); };
+    el("resetScope").onclick = () => { if (confirm("Clear all tasks on this tab?")) { state.profiles[getP()].items[currentScope] = []; save(); renderList(); } };
+
+    el("factoryReset").onclick = () => {
+      if (!confirm("Factory Reset will remove ALL profiles and tasks saved in this browser. Continue?")) return;
+      localStorage.removeItem(LS_KEY);
+      state = initDefault();
+      save(); location.reload();
+    };
+
+    function nextDailyUTC(now=new Date())   { return new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()+1, 0,0,0)); }
+    function nextWeeklyUTC(now=new Date())  { const day = now.getUTCDay(); const daysToWed = (3 - day + 7) % 7 || 7; return new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()+daysToWed, 0,0,0)); }
+    function firstOfNextMonthUTC(now=new Date()) { const y=now.getUTCFullYear(), m=now.getUTCMonth(); return new Date(Date.UTC(m===11?y+1:y, (m+1)%12, 1, 0,0,0)); }
+    function tickClocks() {
+      const now = new Date();
+      el("nextDaily").textContent   = eta(nextDailyUTC(now)-now);
+      el("nextWeekly").textContent  = eta(nextWeeklyUTC(now)-now);
+      el("nextMonthly").textContent = eta(firstOfNextMonthUTC(now)-now);
+      maybeReset("daily",   state.meta.lastDailyReset,   nextDailyUTC,   "lastDailyReset");
+      maybeReset("weekly",  state.meta.lastWeeklyReset,  nextWeeklyUTC,  "lastWeeklyReset");
+      maybeReset("monthly", state.meta.lastMonthlyReset, firstOfNextMonthUTC, "lastMonthlyReset");
+      requestAnimationFrame(tickClocks);
+    }
+    function maybeReset(scope, lastIso, nextFn, field) {
+      const now = new Date();
+      const last = lastIso ? new Date(lastIso) : new Date(0);
+      const next = nextFn(last);
+      if (now >= next) {
+        state.profiles[getP()].items[scope].forEach(x=>x.done=false);
+        state.meta[field] = now.toISOString();
+        save(); renderList();
+      }
+    }
+    function eta(ms) { if (ms<0) ms=0; const s=Math.floor(ms/1000); const h=String(Math.floor(s/3600)).padStart(2,"0"); const m=String(Math.floor((s%3600)/60)).padStart(2,"0"); const ss=String(s%60).padStart(2,"0"); return \`\${h}:\${m}:\${ss}\`; }
+
+    function initDefault() {
+      return {
+        currentProfile: "0",
+        profiles: [emptyProfile("Main")],
+        meta: { lastDailyReset: new Date().toISOString(), lastWeeklyReset: new Date().toISOString(), lastMonthlyReset: new Date().toISOString() }
+      };
+    }
+    function emptyProfile(name) { return { name, items: { daily: [], weekly: [], monthly: [] } }; }
+    function getP(){ return +state.currentProfile; }
+    function getScopeArr(){ return state.profiles[getP()].items[currentScope]; }
+    function uid(){ return Math.random().toString(36).slice(2,9); }
+    function load(){ try { return JSON.parse(localStorage.getItem(LS_KEY)); } catch { return null; } }
+    function save(){ localStorage.setItem(LS_KEY, JSON.stringify(state)); }
+
+    refreshProfiles(); render(); tickClocks();
+    function render(){ refreshProfiles(); tabs.forEach(t => t.classList.toggle("active", t.dataset.scope===currentScope)); renderList(); }
+  })();
+  </script>
+</body>
+</html>
